[gd_scene load_steps=8 format=3 uid="uid://db7xaomgf3hvq"]

[ext_resource type="Script" path="res://player.gd" id="1_5brhk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ccqb6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bsj7x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iojs8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5cyn6"]
albedo_color = Color(0.698039, 0.827451, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ftbkn"]
material = SubResource("StandardMaterial3D_5cyn6")

[sub_resource type="SphereMesh" id="SphereMesh_vopjo"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_5brhk")

[node name="PlayerShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ccqb6")

[node name="PlayerShapeSmall" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.499704, 0)
shape = SubResource("SphereShape3D_bsj7x")

[node name="Neck" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.622, 0)

[node name="RealArm" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -1.21581e-07, 1, 0, -2.78145, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 1, 0)

[node name="InteractPos" type="StaticBody3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.44966)

[node name="SpringArm3D" type="RigidBody3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.30649)
freeze = true

[node name="Area3D" type="Area3D" parent="Neck/Camera3D/SpringArm3D"]

[node name="HitboxCopy" type="CollisionShape3D" parent="Neck/Camera3D/SpringArm3D/Area3D"]
transform = Transform3D(0.540003, 0, 0, 0, 0.540003, 0, 0, 0, 0.540003, 0, 0, 0)
shape = SubResource("BoxShape3D_iojs8")

[node name="Bean" type="MeshInstance3D" parent="Neck"]
mesh = SubResource("CapsuleMesh_ftbkn")
skeleton = NodePath("../..")

[node name="BeanSmall" type="MeshInstance3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.192413, 0)
mesh = SubResource("SphereMesh_vopjo")
skeleton = NodePath("../..")

[connection signal="body_entered" from="Neck/Camera3D/SpringArm3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Neck/Camera3D/SpringArm3D/Area3D" to="." method="_on_area_3d_body_exited"]
